integration-tests/src/test-cases/parse-error-bad-numlit/expected
parse error: from "test-cases/parse-error-bad-numlit/input", line 1:
| 4ty-two
|  ^
|
+-> Syntax error: while parsing number, unexpected 't' in numeric literal

